fixed overflow in navbar

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -8,6 +8,7 @@
     padding: 6vmin;
     position: fixed;
     z-index: 3;
+    overflow-x: hidden;
 }
 
 .analyzeweb__navbar-logo {
@@ -172,7 +173,7 @@
     .analyzeweb__navbar{
         width: 100vw;
         height: 10vh;
-        margin-top: 0.5rem;
+        overflow: hidden;
     }
     .analyzeweb__navbar-logo{
         height: 10vh;
